--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,11 +68,10 @@ body {
 //
 */
 .container {
-  margin: 0 auto;
+  margin: 5px auto;
   height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 /* 
