--- a/assets/css/_utilities.scss
+++ b/assets/css/_utilities.scss
@@ -9,11 +9,11 @@
 
 
 .container {
-    margin: 0 auto;
+    margin: 5px auto;
     height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: center;
+    // align-items: center;
 }
 
 
