fixing min-height

--- a/assets/css/_utilities.scss
+++ b/assets/css/_utilities.scss
@@ -10,7 +10,7 @@
 
 .container {
     margin: 5px auto;
-    height: 100vh;
+    min-height: 100svh;
     display: flex;
     justify-content: center;
     // align-items: center;
