--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@ body {
 */
 .container {
   margin: 5px auto;
-  height: 100vh;
+  min-height: 100svh;
   display: flex;
   justify-content: center;
 }
